<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.geoffreypruvost.projetpruvost.MainActivity">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_weight="2">
        <TextView
            android:id="@+id/clean_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/swapped_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_nettoyer"
            android:onClick="onClickNettoyer"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_retourner"
            android:onClick="onClickReverseStr"
            android:layout_weight="1"/>
        <Button
            android:onClick="onClickCompare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_comparer"
            android:layout_weight="1"/>

        <Button
            android:onClick="onClickVerifRapide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verif_rapide"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
